--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,45 @@
-.hero {
-    text-align: center;
-    background-color: #F9F7FE;
-    color: #000000;
-    padding: 80px 20px;
+:root {
+    --primary-color: #ffc107;
+    --secondary-color: rgb(255, 255, 255);
+
 }
 
+.bar {
+    background-color: #000000 !important;
+    color: var(--primary-color) !important;
+}
 
+body {
+    background-color: #000000;
+}
+
+.container {
+    color: #212529;
+}
+
+.hero {
+    text-align: center;
+    background: url("images/computer.jpg");
+    height: 50vh;
+    width: 100%;
+    color: var(--primary-color);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 80px 20px;
+
+}
+
+.projects {
+    margin-left: 150px;
+    margin-right: 150px;
+}
 
 h1 {
     font-size: 64px;
     font-family: 'Libre Baskerville', serif;
+    color: var(--primary-color)
 }
 
 h2 {
@@ -28,16 +58,28 @@ p {
     font-family: 'Nunito', sans-serif;
     line-height: 30px;
     text-align: center;
-
+    margin-left: 50px !important;
+    color: white;
 
 }
 
 .parragraph {
-    margin: 30px 0px 30px 0px;
+    color: var(--primary-color);
+    margin: 30px 50px 30px 0px;
     font-family: 'Libre Baskerville', serif;
     font-size: 22px;
     text-align: center;
     text-transform: capitalize;
+}
+
+.button {
+    margin-top: 20px;
+    background-color: #ffc10773;
+    color: var(--secondary-color);
+}
+
+.button:hover {
+    background-color: var(--primary-color);
 }
 
 
@@ -52,5 +94,45 @@ p {
     display: block;
     margin: 0 auto;
     width: 30%;
+
+}
+
+i {
+    color: var(--primary-color);
+}
+
+.icon,
+.email {
+    font-size: 30px;
+    color: var(--secondary-color);
+}
+
+.email:hover {
+    color: var(--secondary-color);
+}
+
+@media (max-width:600px) {
+
+    h1,
+    h2 {
+        font-size: 30px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
+
+    .parragraph {
+        font-size: 20px;
+
+    }
+
+    .projects {
+        margin: 0;
+    }
+
+    .hero {
+        margin: 0;
+    }
 
 }
