--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ p {
     margin-top: 20px;
     background-color: #ffc10773;
     color: var(--secondary-color);
+
 }
 
 .button:hover {
@@ -90,10 +91,12 @@ p {
     margin-bottom: 30px;
 }
 
-.image {
+
+img {
     display: block;
     margin: 0 auto;
     width: 30%;
+    border-radius: 10px;
 
 }
 
@@ -118,21 +121,47 @@ i {
         font-size: 30px;
     }
 
-    h3 {
-        font-size: 20px;
-    }
-
+    h3,
     .parragraph {
         font-size: 20px;
-
+        margin-bottom: 0px;
     }
 
-    .projects {
-        margin: 0;
+    .projects,
+    .hero,
+    .text {
+        margin: 0px !important;
     }
 
-    .hero {
-        margin: 0;
+    .about-section h1 {
+        font-size: 30px;
+        text-align: center;
     }
 
+    .about-section h3 {
+        text-align: center;
+        font-size: 20px !important;
+    }
+
+    .about-section p {
+        line-height: 25px;
+        margin: 0px !important;
+    }
+
+    .about-section .button {
+        margin-left: 90px;
+    }
+
+    a {
+        font-size: 15px !important;
+    }
+}
+
+.about-section h1 {
+    font-size: 50px;
+}
+
+.about-section h3 {
+    color: var(--secondary-color);
+    font-size: 25px;
 }
