--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,7 @@ body {
 
 }
 
-.projects {
-    margin-left: 150px;
-    margin-right: 150px;
-}
+
 
 h1 {
     font-size: 64px;
@@ -58,7 +55,7 @@ p {
     font-family: 'Nunito', sans-serif;
     line-height: 30px;
     text-align: center;
-    margin-left: 50px !important;
+    margin-left: 50px;
     color: white;
 
 }
@@ -164,4 +161,49 @@ i {
 .about-section h3 {
     color: var(--secondary-color);
     font-size: 25px;
+}
+
+.works h3 {
+    color: var(--primary-color);
+    text-align: center;
+    margin-top: 30px;
+    font-weight: bold;
+}
+
+.works p {
+    margin-left: 0px !important;
+}
+
+.works .dictionary {
+    height: 505.28px;
+    width: 318px;
+}
+
+.works h1 {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.works .weather {
+    height: 112px;
+    width: 237px;
+    margin-top: 30px;
+}
+
+@media (max-width:600px) {
+    h1 {
+        font-size: 28px !important;
+        margin-left: 10px !important;
+        margin-right: 10px !important;
+    }
+
+    .works .weather {
+        height: 139px !important;
+        width: 252px !important;
+        margin-top: 0px !important;
+        margin-left: 61px !important;
+    }
+
+
 }
