--- a/styles.css
+++ b/styles.css
@@ -36,18 +36,24 @@ body {
 h1 {
     font-size: 64px;
     font-family: 'Libre Baskerville', serif;
-    color: var(--primary-color)
+    color: var(--primary-color);
+    text-align: center;
+
 }
 
 h2 {
     font-size: 54px;
     font-family: 'Nunito', sans-serif;
     font-weight: 700;
+    color: var(--primary-color);
+    text-align: center;
 }
 
 h3 {
     font-family: 'Nunito', sans-serif;
     font-weight: 200;
+    color: var(--primary-color);
+    text-align: center;
 }
 
 p {
@@ -55,9 +61,19 @@ p {
     font-family: 'Nunito', sans-serif;
     line-height: 30px;
     text-align: center;
-    margin-left: 50px;
-    color: white;
 
+    color: var(--secondary-color);
+
+
+}
+
+h4,
+h5 {
+    color: var(--primary-color);
+    font-family: 'Libre Baskerville',
+        serif;
+    font-size: 45px;
+    text-align: center;
 }
 
 .parragraph {
@@ -105,6 +121,7 @@ i {
 .email {
     font-size: 30px;
     color: var(--secondary-color);
+    text-decoration: none;
 }
 
 .email:hover {
@@ -122,6 +139,7 @@ i {
     .parragraph {
         font-size: 20px;
         margin-bottom: 0px;
+        margin-left: 50px;
     }
 
     .projects,
@@ -133,6 +151,13 @@ i {
     .about-section h1 {
         font-size: 30px;
         text-align: center;
+    }
+
+    h4,
+    h5 {
+        font-size: 25px !important;
+        text-align: center;
+
     }
 
     .about-section h3 {
