--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ i {
     .parragraph {
         font-size: 20px;
         margin-bottom: 0px;
-        margin-left: 50px;
+
     }
 
     .projects,
@@ -175,7 +175,7 @@ i {
     }
 
     a {
-        font-size: 15px !important;
+        font-size: 15px;
     }
 }
 
@@ -231,4 +231,18 @@ i {
     }
 
 
+}
+
+.social-links {
+    text-decoration: none;
+    font-size: 40px;
+    margin: 0 20px;
+}
+
+.footer-contact {
+    margin-top: 20%;
+}
+
+.footer {
+    margin: 30px 0px;
 }
